fix(配置): 修复服务端口冲突和路由配置问题
- 调整商品服务和订单服务端口配置，解决端口冲突问题
- 修正网关路由配置，匹配实际Controller路径
- 在订单服务中禁用RabbitMQ自动配置
- 更新收藏接口路径和认证方式
- 添加服务启动脚本和错误记录文档

--- a/anqigou-gateway/src/main/resources/application.yml
+++ b/anqigou-gateway/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
         - id: user-service
           uri: lb://anqigou-user-service
           predicates:
-            - Path=/api/auth/**,/api/user/**
+            - Path=/api/auth/**,/api/user/**,/api/feedback/**
           filters:
             - StripPrefix=1
 
@@ -30,7 +30,7 @@ spring:
         - id: product-service
           uri: lb://anqigou-product-service
           predicates:
-            - Path=/api/products/**
+            - Path=/api/product/**
           filters:
             - StripPrefix=1
 
@@ -38,7 +38,7 @@ spring:
         - id: order-service
           uri: lb://anqigou-order-service
           predicates:
-            - Path=/api/orders/**,/api/cart/**
+            - Path=/api/order/**,/api/cart/**
           filters:
             - StripPrefix=1
 
