--- a/anqigou-order-service/src/main/resources/application.yml
+++ b/anqigou-order-service/src/main/resources/application.yml
@@ -2,6 +2,10 @@ spring:
   application:
     name: anqigou-order-service
 
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
+
   cloud:
     nacos:
       discovery:
@@ -43,7 +47,7 @@ mybatis-plus:
     map-underscore-to-camel-case: true
 
 server:
-  port: 8082
+  port: 8083
   servlet:
     context-path: /
 
