feat(订单服务): 实现购物车商品详情展示功能
添加ProductDetailDTO和ProductSkuDTO用于商品详情展示
配置Feign客户端超时和压缩参数
完善购物车服务获取商品详情的逻辑

--- a/anqigou-order-service/src/main/resources/application.yml
+++ b/anqigou-order-service/src/main/resources/application.yml
@@ -55,3 +55,17 @@ logging:
   level:
     root: info
     com.anqigou: debug
+    com.anqigou.order.client: debug
+
+# Feign配置
+feign:
+  client:
+    config:
+      anqigou-product-service:
+        connectTimeout: 5000
+        readTimeout: 5000
+  compression:
+    request:
+      enabled: true
+    response:
+      enabled: true
