fix(拦截器): 优化用户ID拦截器逻辑并更新路径配置
重构用户ID拦截器以支持JWT解析并添加日志记录
更新WebMvcConfig中的排除路径配置
注释掉Nacos配置使服务可独立运行

--- a/anqigou-user-service/src/main/resources/application.yml
+++ b/anqigou-user-service/src/main/resources/application.yml
@@ -2,19 +2,20 @@ spring:
   application:
     name: anqigou-user-service
 
-  cloud:
-    nacos:
-      discovery:
-        server-addr: localhost:8848
-        namespace: public
-        group: DEFAULT_GROUP
-      config:
-        server-addr: localhost:8848
-        file-extension: yml
-        namespace: public
-        group: DEFAULT_GROUP
-        import-check:
-          enabled: false
+# 暂时注释掉Nacos配置，让服务可以独立运行
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: localhost:8848
+#        namespace: public
+#        group: DEFAULT_GROUP
+#      config:
+#        server-addr: localhost:8848
+#        file-extension: yml
+#        namespace: public
+#        group: DEFAULT_GROUP
+#        import-check:
+#          enabled: false
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
