feat(监控): 添加服务监控工具和错误处理文档
添加日志查看脚本 view-logs.bat 用于实时监控服务日志
编写服务监控说明文档，包含常见错误处理方案
更新网关配置以支持更好的错误处理和CORS
为所有服务添加Nacos依赖实现服务注册发现

--- a/anqigou-admin-service/src/main/resources/application.yml
+++ b/anqigou-admin-service/src/main/resources/application.yml
@@ -2,6 +2,18 @@ spring:
   application:
     name: anqigou-admin-service
 
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
+        namespace: public
+      config:
+        server-addr: localhost:8848
+        file-extension: yml
+        namespace: public
+        import-check:
+          enabled: false
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/anqigou?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&allowMultiQueries=true
@@ -42,7 +54,7 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 server:
-  port: 8085
+  port: 8087
   servlet:
     context-path: /
 
