--- a/anqigou-seller-service/src/main/resources/application.yml
+++ b/anqigou-seller-service/src/main/resources/application.yml
@@ -2,6 +2,18 @@ spring:
   application:
     name: anqigou-seller-service
 
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
+        namespace: public
+      config:
+        server-addr: localhost:8848
+        file-extension: yml
+        namespace: public
+        import-check:
+          enabled: false
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/anqigou?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&allowMultiQueries=true
@@ -42,7 +54,7 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 server:
-  port: 8084
+  port: 8086
   servlet:
     context-path: /
 
