--- a/anqigou-user-service/src/main/resources/application.yml
+++ b/anqigou-user-service/src/main/resources/application.yml
@@ -46,6 +46,24 @@ spring:
         min-idle: 5
         max-wait: 10000ms
 
+  # Spring Boot DevTools 配置
+  devtools:
+    restart:
+      enabled: true
+      # 排除不需要重启的目录
+      exclude: WEB-INF/**,static/**,public/**,templates/**
+    livereload:
+      enabled: true
+  # 禁用模板缓存
+  thymeleaf:
+    cache: false
+  # 禁用静态资源缓存
+  web:
+    resources:
+      static-locations: classpath:/static/
+      cache:
+        period: 0
+
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.anqigou.user.entity
@@ -62,3 +80,6 @@ logging:
   level:
     root: info
     com.anqigou: debug
+    org.springframework.web.servlet: trace
+    org.springframework.web: trace
+    org.springframework.http: trace
