feat(微信登录): 实现微信小程序登录功能
添加微信小程序SDK依赖和配置
新增WechatConfig配置类读取微信配置
修改User实体类添加微信相关字段
实现完整的微信登录流程，包括调用微信API获取用户信息
处理新用户自动注册和已有用户信息更新
生成JWT token返回给客户端

--- a/anqigou-user-service/src/main/resources/application.yml
+++ b/anqigou-user-service/src/main/resources/application.yml
@@ -71,6 +71,12 @@ mybatis-plus:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
+# 微信小程序配置
+wechat:
+  miniapp:
+    appid: wx8dbab4f617ac7415 # 替换为真实的小程序AppID
+    secret: 397b54148106ca36fa1217e6afd9d108 # 替换为真实的小程序密钥
+
 server:
   port: 8081
   servlet:
