--- a/anqigou-user-service/pom.xml
+++ b/anqigou-user-service/pom.xml
@@ -22,6 +22,19 @@
             <artifactId>anqigou-common</artifactId>
             <version>1.0.0</version>
         </dependency>
+        
+        <!-- 微信小程序SDK -->
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-miniapp</artifactId>
+            <version>4.2.0</version>
+        </dependency>
+        
+        <!-- HTTP客户端 -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
