feat(购物车): 增强商品详情获取逻辑并添加负载均衡支持
- 在pom.xml中添加spring-cloud-starter-loadbalancer依赖以支持Feign客户端负载均衡
- 移除Feign客户端中的硬编码URL，使用服务发现
- 优化购物车服务中商品详情获取逻辑，增加SKU匹配的详细日志和错误处理
- 添加对商品服务返回空数据的处理逻辑
- 完善日志信息，包含更多调试细节

--- a/anqigou-user-service/pom.xml
+++ b/anqigou-user-service/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+        <!-- LoadBalancer for Feign clients -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+
         <!-- Nacos 服务注册 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
