feat(物流服务): 集成快递100 API实现物流轨迹查询
添加快递100 API配置和客户端工具类
实现物流轨迹实时查询功能
添加快递公司编码映射配置
新增RestTemplate配置类
更新物流服务实现类以支持API查询
添加测试类和模拟数据
移除过时的监控文档

--- a/anqigou-logistics-service/src/main/resources/application.yml
+++ b/anqigou-logistics-service/src/main/resources/application.yml
@@ -62,3 +62,12 @@ logging:
   level:
     root: info
     com.anqigou: debug
+
+# 快递100 API配置
+kuaidi100:
+  # 这里需要填写真实的快递100 API密钥和客户编号
+  api-key: EQSKhWGU7976
+  customer: D5D0F76F915DDC37AE25DE6FB1E17441
+  secret: EQSKhWGU7976
+  # 快递公司编码映射
+  company-code-map: '{"顺丰":"sf","中通":"zto","圆通":"yto","申通":"sto","韵达":"yd"}'
