feat(elasticsearch): 实现商品搜索的Elasticsearch集成
添加Elasticsearch配置和工具类，支持商品搜索功能
- 新增Elasticsearch配置类，启用ES客户端
- 实现商品文档模型和索引映射
- 添加商品同步服务，支持全量和增量同步
- 实现商品搜索功能，支持关键词模糊匹配和分类过滤
- 添加自动索引初始化配置

--- a/anqigou-product-service/src/main/resources/application.yml
+++ b/anqigou-product-service/src/main/resources/application.yml
@@ -39,6 +39,10 @@ mybatis-plus:
 elasticsearch:
   host: localhost
   port: 9200
+  # 是否启用Elasticsearch搜索功能（默认false，需手动开启）
+  enabled: true
+  # 应用启动时是否自动初始化索引并同步数据（默认false）
+  auto-init: true
 
 server:
   port: 8082
